# CS301-Embedded-System

./: .gitignore  README.md
lab02/: 11510225.c  (+4 more)
lab11/: 11510225.uvguix.lifesaver  11510225.uvoptx  11510225.uvprojx  CMakeLists.txt  JLinkLog.txt  main.c
lab11/HARDWARE/LCD/: lcd.c
lab11/HARDWARE/REMOTE/: remote.c  remote.h
lab11/Listings/: startup_stm32f10x_hd.lst
lab11/Objects/: 11510225.axf  11510225.build_log.htm  11510225.htm  11510225.lnp  11510225_Target 1.dep  delay.crf  key.crf  lcd.crf  led.crf  main.crf  misc.crf  remote.crf  stm32f10x_gpio.crf  stm32f10x_rcc.crf  stm32f10x_tim.crf  stm32f10x_usart.crf  sys.crf  system_stm32f10x.crf  usart.crf
lab12/: 11510225.uvguix.lifesaver  11510225.uvoptx  11510225.uvprojx  CMakeLists.txt  JLinkLog.txt  main.c
lab12/Listings/: startup_stm32f10x_hd.lst
lab12/Objects/: 11510225.axf  11510225.build_log.htm  11510225.htm  11510225.lnp  11510225_Target 1.dep  delay.crf  iap.crf  key.crf  lcd.crf  led.crf  main.crf  misc.crf  stm32f10x_flash.crf  stm32f10x_gpio.crf  stm32f10x_rcc.crf  stm32f10x_usart.crf  stmflash.crf  sys.crf  system_stm32f10x.crf  usart.crf
lab12/RTE/: RTE_Components.h
lab12/app1/: JLinkLog.txt  app1.axf  app1.uvguix.lifesaver  app1.uvoptx  app1.uvprojx  main.c
lab12/app1/Listings/: startup_stm32f10x_hd.lst
lab12/app1/Objects/: app1.axf  app1.build_log.htm  app1.htm  app1.lnp  app1.sct  app1_Target 1.dep  delay.crf  main.crf  misc.crf  stm32f10x_gpio.crf  stm32f10x_rcc.crf  stm32f10x_usart.crf  sys.crf  system_stm32f10x.crf  usart.crf
lab12/app1/RTE/: RTE_Components.h
lab12/app2/: main.c
(+227 files in other folders)
